--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "mcp>=1.11.0",
     "pandas>=2.3.0",
+    "streamlit>=1.46.1",
 ]
